objects/IdMatrix_Assessment_Factor__c.object
<CustomObject>
    <fields>
        <fullName>Fraud_Assessment_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Assessment Response</label>
        <referenceTo>IdMatrix_Fraud_Assessment_Response__c</referenceTo>
        <relationshipName>Assessment_Factors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <label>Threshold</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IdMatrix Assessment Factor</label>
    <nameField>
        <label>Assessment Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IdMatrix Assessment Factor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>